Source/JavaScriptCore: Introducing the VMStackBounds class. https://bugs.webkit.org/show_bug.cgi?id=117862.

Reviewed by Geoffrey Garen.

- Removed Interpreter::StackPolicy.
- The new VMStackBounds will take over choosing the appropriate stack
  size requirements, and invoking the underlying WTF::StackBounds to
  to the real bounds check.
- VMStackBounds will now be used universally throughout JSC instead of
  WTF::StackBounds.

* JavaScriptCore.xcodeproj/project.pbxproj:
* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::BytecodeGenerator):
* bytecompiler/BytecodeGenerator.h:
* interpreter/Interpreter.cpp:
(JSC::Interpreter::execute):
(JSC::Interpreter::executeCall):
(JSC::Interpreter::executeConstruct):
(JSC::Interpreter::prepareForRepeatCall):
* interpreter/Interpreter.h:
(JSC::Interpreter::isInErrorHandlingMode):
* parser/Parser.cpp:
(JSC::::Parser):
* parser/Parser.h:
* runtime/StringRecursionChecker.h:
(JSC::StringRecursionChecker::performCheck):
* runtime/VMStackBounds.h: Added.
(JSC::VMStackBounds::VMStackBounds):
(JSC::VMStackBounds::isSafeToRecurse):
(JSC::VMStackBounds::requiredCapacity):

LayoutTests: Reverting failure expectation for fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html.
https://bugs.webkit.org/show_bug.cgi?id=117862.

Reviewed by Geoffrey Garen.

* platform/mac/TestExpectations:



Canonical link: https://commits.webkit.org/136033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151869 268f45cc-cd09-0410-ab3c-d52691b4dbfc